tests/err_qty/exp_paren_empty.stderr
error: unexpected end of input, expected integer literal
 --> tests/err_qty/exp_paren_empty.rs:5:28
  |
5 |     let _err = qty![1.0 m^()];
  |                            ^
